public/stylesheets/automator.css
._-automator-split-pane-fix {
  width: 100%;
}

.c-automator-tab {
  height: 50rem;
  width: 100rem;
}

.c-automator-tab > div {
  height: 50rem;
  width: 100rem;
}

.c-automator-tab--full-screen {
  height: auto;
  width: auto;
}

.l-automator-tab {
  position: relative;
  align-self: center;
  margin-top: 0.5rem;
}

.l-automator-points-list-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 1rem;
  user-select: none;
}

.c-automator-points-list-col {
  position: relative;
  border: 0.15rem solid var(--color-text);
  padding: 1rem;
  text-align: left;
}

.l-automator-points-list-side-col {
  display: flex;
  flex-direction: column;
  width: 35%;
  justify-content: space-between;
}

.l-automator-points-list-center-col {
  display: flex;
  flex-direction: column;
  width: 25%;
  justify-content: space-between;
}

.c-automator-points-list-cell {
  position: relative;
  width: 100%;
  height: 48%;
  padding: 1rem;
  border: 0.15rem solid var(--color-text);
  text-align: left;
  overflow: hidden;
}

.c-automator-points-list-symbol {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  font-size: 15rem;
  opacity: 0.2;
  text-shadow: 0 0 2rem;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.c-automator-points-list-perk-label {
  display: inline-block;
  width: 3rem;
  max-width: 3rem;
  font-weight: bold;
}

.c-automator-points-list-single-entry {
  position: relative;
}

.c-automator-points-list-ap {
  position: absolute;
  right: 0;
  opacity: 0.8;
}

.c-automator-points-list-ap--large {
  position: absolute;
  right: 1rem;
  font-size: 1.8rem;
  opacity: 0.6;
}

.l-automator-tab--full-screen {
  position: fixed;
  left: 0;
  right: 0;
  top: -6.5rem;
  bottom: 0;
  margin-top: 0;
  z-index: 4;
}

.l-automator-tab--full-screen > div {
  height: calc(100% - 6.5rem);
  width: 100%;
}

.l-automator-pane {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.l-automator-pane__content {
  flex: 1 1 auto;
}

.l-automator-pane__controls {
  flex: 0 0 auto;
}

.c-automator__controls {
  background-color: #262626;
}

.l-automator__controls {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  /* for corner buttons */
  position: relative;
}

.l-automator__button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.3rem 0.8rem 0.3rem 0.8rem;
}

.l-automator__button--corner {
  position: absolute;
  right: 0;
  top: 0
}

.c-automator__button {
  margin: 0.4rem;
  border-radius: 0.3rem;
}

.c-automator__button-play--active {
  border-color: #45a047;
  color: #45a047;
}

.c-automator__button--active {
  border-color: #45a047;
  color: #45a047;
}

.l-automator__script-names {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

.l-automator__scripts-dropdown {
  width: 90%;
  height: 90%;
  padding: 0.1rem;
}

.l-automator__rename-input {
  width: 90%;
  height: 90%;
  padding: 0.1rem;
}

.c-automator-editor__active-line {
  background: rgb(43, 6, 92);
  outline: 0.1rem solid rgb(68, 0, 255);
}

.c-automator-editor__active-line-gutter {
  font-weight: bold;
  background: rgb(43, 6, 92);
  filter: brightness(200%);
  outline: 0.1rem solid rgb(68, 0, 255);
}

.c-automator-editor__event-line {
  background: rgb(0, 127, 0);
  outline: 0.1rem solid rgb(25, 200, 25);
}

.c-automator-editor__event-line-gutter {
  font-weight: bold;
  background: rgb(0, 127, 0);
  filter: brightness(200%);
  outline: 0.1rem solid rgb(25, 200, 25);
}

.c-automator-editor__error-line {
  background: rgb(172, 6, 23);
  outline: 0.1rem solid rgb(255, 0, 64);
}

.c-automator-editor__error-line-gutter {
  font-weight: bold;
  background: rgb(172, 6, 23);
  filter: brightness(200%);
  outline: 0.1rem solid rgb(255, 0, 64);
}

.c-automator-editor {
  font-family: Typewriter, serif;
  font-size: 1.4rem;
  text-align: left;
  border-bottom: 0.15rem solid #262626;
}

.l-automator-editor {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
}

.l-automator-editor__codemirror-container {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
}

.CodeMirror-hint {
  font-size: 1rem;
  font-family: Typewriter, serif;
}

.cm-s-liquibyte.CodeMirror,
.cm-s-panda-syntax.CodeMirror {
  font-size: 1.4rem;
  font-family: Typewriter, serif;
  line-height: 1.6rem;
  /* required for expanding into pane */
  flex: 1 1 auto;
}

.c-automator-docs {
  border-right: 0.15rem solid #262626;
  border-bottom: 0.15rem solid #262626;
  background-color: lightgray;
  padding-left: 1rem;
  font-size: 1.4rem;
  color: black;
  text-align: left;
  overflow: auto;
}

.c-automator-docs-page {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.c-automator-docs-page__link {
  text-decoration: underline;
  cursor: pointer;
}

.c-automator-docs-page__indented {
  margin-left: 2rem;
}


.o-automator-error-underline {
  display: inline-block;
  position: relative;
}

.o-automator-error-underline:before {
  content: "~~~~~~~~~~~~";
  font-size: 0.6em;
  font-weight: 700;
  font-family: Times New Roman, Serif;
  color: red;
  width: 100%;
  position: absolute;
  top: 12px;
  left: -1px;
  overflow: hidden;
}

